// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pacman> <Pacman> Mount: enzyme.mount 1`] = `
.css-11jr1oo,
[data-css-11jr1oo] {
  position: relative;
}

.css-11jr1oo> div:nth-child(2),
[data-css-11jr1oo]> div:nth-child(2) {
  animation: animation_1w5vsxu 1s -0.99s infinite linear;
  -webkit-animation: animation_1w5vsxu 1s -0.99s infinite linear;
}

.css-11jr1oo> div:nth-child(3),
[data-css-11jr1oo]> div:nth-child(3) {
  animation: animation_1w5vsxu 1s -0.66s infinite linear;
  -webkit-animation: animation_1w5vsxu 1s -0.66s infinite linear;
}

.css-11jr1oo> div:nth-child(4),
[data-css-11jr1oo]> div:nth-child(4) {
  animation: animation_1w5vsxu 1s -0.33s infinite linear;
  -webkit-animation: animation_1w5vsxu 1s -0.33s infinite linear;
}

.css-11jr1oo> div:nth-child(5),
[data-css-11jr1oo]> div:nth-child(5) {
  animation: animation_1w5vsxu 1s 0.00s infinite linear;
  -webkit-animation: animation_1w5vsxu 1s 0.00s infinite linear;
}

.css-11jr1oo > div:first-of-type,
[data-css-11jr1oo] > div:first-of-type {
  border-bottom: 25px solid #ffffff;
  border-left: 25px solid #ffffff;
  border-radius: 25px;
  border-right: 25px solid transparent;
  border-top: 25px solid #ffffff;
  height: 0px;
  width: 0px;
  animation: animation_1dfnslg 0.5s 0s infinite;
  left: -30px;
  position: relative;
  -webkit-animation: animation_1dfnslg 0.5s 0s infinite;
}

.css-11jr1oo > div:nth-child(2),
[data-css-11jr1oo] > div:nth-child(2) {
  border-bottom: 25px solid #ffffff;
  border-left: 25px solid #ffffff;
  border-radius: 25px;
  border-right: 25px solid transparent;
  border-top: 25px solid #ffffff;
  height: 0px;
  width: 0px;
  animation: animation_mvibk4 0.5s 0s infinite;
  left: -30px;
  margin-top: -50px;
  position: relative;
  -webkit-animation: animation_mvibk4 0.5s 0s infinite;
}

.css-11jr1oo > div:nth-child(3),
[data-css-11jr1oo] > div:nth-child(3),
.css-11jr1oo > div:nth-child(4),
[data-css-11jr1oo] > div:nth-child(4),
.css-11jr1oo > div:nth-child(5),
[data-css-11jr1oo] > div:nth-child(5),
.css-11jr1oo > div:nth-child(6),
[data-css-11jr1oo] > div:nth-child(6) {
  border-radius: 100%;
  height: 10px;
  margin: 2px;
  width: 10px;
  background-color: #ffffff;
  left: 70px;
  position: absolute;
  top: 25px;
  transform: translate(0,-6.25px);
  -webkit-transform: translate(0,-6.25px);
}

<Pacman
  loading={true}
>
  <div
    data-css-11jr1oo=""
  >
    <div />
    <div />
    <div />
    <div />
    <div />
  </div>
</Pacman>
`;

exports[`<Pacman> <Pacman> Render: enzyme.render 1`] = `
.css-11jr1oo,
[data-css-11jr1oo] {
  position: relative;
}

.css-11jr1oo> div:nth-child(2),
[data-css-11jr1oo]> div:nth-child(2) {
  animation: animation_1w5vsxu 1s -0.99s infinite linear;
  -webkit-animation: animation_1w5vsxu 1s -0.99s infinite linear;
}

.css-11jr1oo> div:nth-child(3),
[data-css-11jr1oo]> div:nth-child(3) {
  animation: animation_1w5vsxu 1s -0.66s infinite linear;
  -webkit-animation: animation_1w5vsxu 1s -0.66s infinite linear;
}

.css-11jr1oo> div:nth-child(4),
[data-css-11jr1oo]> div:nth-child(4) {
  animation: animation_1w5vsxu 1s -0.33s infinite linear;
  -webkit-animation: animation_1w5vsxu 1s -0.33s infinite linear;
}

.css-11jr1oo> div:nth-child(5),
[data-css-11jr1oo]> div:nth-child(5) {
  animation: animation_1w5vsxu 1s 0.00s infinite linear;
  -webkit-animation: animation_1w5vsxu 1s 0.00s infinite linear;
}

.css-11jr1oo > div:first-of-type,
[data-css-11jr1oo] > div:first-of-type {
  border-bottom: 25px solid #ffffff;
  border-left: 25px solid #ffffff;
  border-radius: 25px;
  border-right: 25px solid transparent;
  border-top: 25px solid #ffffff;
  height: 0px;
  width: 0px;
  animation: animation_1dfnslg 0.5s 0s infinite;
  left: -30px;
  position: relative;
  -webkit-animation: animation_1dfnslg 0.5s 0s infinite;
}

.css-11jr1oo > div:nth-child(2),
[data-css-11jr1oo] > div:nth-child(2) {
  border-bottom: 25px solid #ffffff;
  border-left: 25px solid #ffffff;
  border-radius: 25px;
  border-right: 25px solid transparent;
  border-top: 25px solid #ffffff;
  height: 0px;
  width: 0px;
  animation: animation_mvibk4 0.5s 0s infinite;
  left: -30px;
  margin-top: -50px;
  position: relative;
  -webkit-animation: animation_mvibk4 0.5s 0s infinite;
}

.css-11jr1oo > div:nth-child(3),
[data-css-11jr1oo] > div:nth-child(3),
.css-11jr1oo > div:nth-child(4),
[data-css-11jr1oo] > div:nth-child(4),
.css-11jr1oo > div:nth-child(5),
[data-css-11jr1oo] > div:nth-child(5),
.css-11jr1oo > div:nth-child(6),
[data-css-11jr1oo] > div:nth-child(6) {
  border-radius: 100%;
  height: 10px;
  margin: 2px;
  width: 10px;
  background-color: #ffffff;
  left: 70px;
  position: absolute;
  top: 25px;
  transform: translate(0,-6.25px);
  -webkit-transform: translate(0,-6.25px);
}

<div
  data-css-11jr1oo=""
>
  <div />
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`<Pacman> <Pacman> Shallow: enzyme.shallow 1`] = `
.css-11jr1oo,
[data-css-11jr1oo] {
  position: relative;
}

.css-11jr1oo> div:nth-child(2),
[data-css-11jr1oo]> div:nth-child(2) {
  animation: animation_1w5vsxu 1s -0.99s infinite linear;
  -webkit-animation: animation_1w5vsxu 1s -0.99s infinite linear;
}

.css-11jr1oo> div:nth-child(3),
[data-css-11jr1oo]> div:nth-child(3) {
  animation: animation_1w5vsxu 1s -0.66s infinite linear;
  -webkit-animation: animation_1w5vsxu 1s -0.66s infinite linear;
}

.css-11jr1oo> div:nth-child(4),
[data-css-11jr1oo]> div:nth-child(4) {
  animation: animation_1w5vsxu 1s -0.33s infinite linear;
  -webkit-animation: animation_1w5vsxu 1s -0.33s infinite linear;
}

.css-11jr1oo> div:nth-child(5),
[data-css-11jr1oo]> div:nth-child(5) {
  animation: animation_1w5vsxu 1s 0.00s infinite linear;
  -webkit-animation: animation_1w5vsxu 1s 0.00s infinite linear;
}

.css-11jr1oo > div:first-of-type,
[data-css-11jr1oo] > div:first-of-type {
  border-bottom: 25px solid #ffffff;
  border-left: 25px solid #ffffff;
  border-radius: 25px;
  border-right: 25px solid transparent;
  border-top: 25px solid #ffffff;
  height: 0px;
  width: 0px;
  animation: animation_1dfnslg 0.5s 0s infinite;
  left: -30px;
  position: relative;
  -webkit-animation: animation_1dfnslg 0.5s 0s infinite;
}

.css-11jr1oo > div:nth-child(2),
[data-css-11jr1oo] > div:nth-child(2) {
  border-bottom: 25px solid #ffffff;
  border-left: 25px solid #ffffff;
  border-radius: 25px;
  border-right: 25px solid transparent;
  border-top: 25px solid #ffffff;
  height: 0px;
  width: 0px;
  animation: animation_mvibk4 0.5s 0s infinite;
  left: -30px;
  margin-top: -50px;
  position: relative;
  -webkit-animation: animation_mvibk4 0.5s 0s infinite;
}

.css-11jr1oo > div:nth-child(3),
[data-css-11jr1oo] > div:nth-child(3),
.css-11jr1oo > div:nth-child(4),
[data-css-11jr1oo] > div:nth-child(4),
.css-11jr1oo > div:nth-child(5),
[data-css-11jr1oo] > div:nth-child(5),
.css-11jr1oo > div:nth-child(6),
[data-css-11jr1oo] > div:nth-child(6) {
  border-radius: 100%;
  height: 10px;
  margin: 2px;
  width: 10px;
  background-color: #ffffff;
  left: 70px;
  position: absolute;
  top: 25px;
  transform: translate(0,-6.25px);
  -webkit-transform: translate(0,-6.25px);
}

<div
  data-css-11jr1oo=""
>
  <div />
  <div />
  <div />
  <div />
  <div />
</div>
`;
